Group now aborts in the face of a ZNOAUTH error when creating the parent path for the group.

See: https://issues.apache.org/jira/browse/MESOS-958

Review: https://reviews.apache.org/r/17577